--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   geocoding: ^3.0.0
   geolocator: ^13.0.2
   http: ^1.2.2
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +26,4 @@ flutter:
 
   assets:
     - .env
+    - assets/
